--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@types/uuid": "8.3.1",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "nock": "13.1.3",
         "prettier-eslint": "13.0.0",
         "prettier-eslint-cli": "5.0.1",
