--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "organizer",
     "version": "1.0.1",
+    "homepage": "https://github.com/AvrahamKrol/todo-react.git",
     "private": true,
     "author": {
         "email": "admin@lectrum.io",
@@ -10,6 +11,8 @@
     "scripts": {
         "dev": "react-scripts start",
         "build": "react-scripts build",
+        "predeploy" : "npm run build",
+        "deploy" : "gh-pages -d build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "start": "npm run build && serve -s build",
@@ -63,6 +66,7 @@
         "eslint": "^7.32.0",
         "eslint-config-prettier": "8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "gh-pages": "^5.0.0",
         "nock": "13.1.3",
         "prettier-eslint": "13.0.0",
         "prettier-eslint-cli": "5.0.1",
