--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "organizer",
     "version": "1.0.1",
-    "homepage": "https://github.com/AvrahamKrol/todo-react.git",
+    "homepage": "https://avrahamkrol.github.io/todo-react/",
     "private": true,
     "author": {
         "email": "admin@lectrum.io",
